@@ -643,8 +643,8 @@ Licensed under the GPL
     data, 
 
     GPSMap can download maps from several online sources (MapBlast, Tiger,
-    Terraserver) as well as use user-provided graphics, provided you know the
-    scale and center coordinates.
+    Terraserver, Earthamaps, and more) as well as use user-provided graphics, 
+    provided you know the scale and center coordinates.
 
     Main features:
         * Travel path/track
@@ -661,17 +661,17 @@ Licensed under the GPL
     overlays.
 
     GPSMap currently can use maps from:
-        MapBlast    (Vector) (Broken, read warning)
+        MapBlast    (Vector) 
         MapPoint    (Vector) (Broken, read warning)
         Terraserver (Satellite Photo)
         Tiger       (Vector) (US Census data)
         Earthamap   (Vector) (Requires perl)
         Terraserver Topo (Vector-ish) 
        
-    Due to changes in the map websites, MapBlast and MapPoint cannot be used
-    with new maps.  These sources are left in GPSMap only for plotting 
-    previously kept map images, and they will fail if they are selected and
-    a user map is not available.
+    Due to changes in the map websites, MapPoint cannot be used with new maps.  
+    These sources are left in GPSMap only for plotting previously kept map 
+    images, and they will fail if they are selected and a user map is not 
+    available.
 
     Earthamap map fetching requires prefetching a cookie from the website. This
     is automated through the gpsmap-helper-earthamaps script, which requires
